追加修正: 指摘箇所修正３